// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/Select/Select Defaults play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:rf:"
           class="_label_348na_5"
           for="selectId-:re:"
    >
      Ledetekst
    </label>
    <div class="_selectContainer_1mv9o_1 ">
      <select id="selectId-:re:"
              class="_select_1mv9o_1"
              style="color: var(--palette-graphite-50);"
      >
        <option value>
          Velg
        </option>
        <option class
                value="option1"
        >
          Test 1
        </option>
        <option class
                value="option2"
        >
          Test 2
        </option>
      </select>
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _selectIcon_1mv9o_50"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
        </path>
      </svg>
    </div>
    <div id="selectErrorId-:rd:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/Select/Select WithAttributes play-test 1`] = `
<div data-test-block="true">
  <div lang="nb"
       class="dummyClassname"
  >
    <label id="labelId-:r6:"
           class="_label_348na_5"
           for="htmlid"
    >
      Ledetekst
    </label>
    <div class="_selectContainer_1mv9o_1 ">
      <select id="htmlid"
              class="_select_1mv9o_1"
              data-testid="123ID"
              form="form123"
              style="color: var(--palette-graphite-50);"
      >
        <option value>
          Velg
        </option>
        <option class
                value="option1"
        >
          Test 1
        </option>
        <option class
                value="option2"
        >
          Test 2
        </option>
      </select>
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _selectIcon_1mv9o_50"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
        </path>
      </svg>
    </div>
    <div id="selectErrorId-:r4:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/Select/Select WithAutoCompleteNameAndPlaceholder play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r17:"
           class="_label_348na_5"
           for="selectId-:r16:"
    >
      Ledetekst
    </label>
    <div class="_selectContainer_1mv9o_1 ">
      <select id="selectId-:r16:"
              class="_select_1mv9o_1"
              autocomplete="given-name"
              name="test_name"
              style="color: var(--palette-graphite-50);"
      >
        <option value>
          Velg fra listen noe gøy
        </option>
        <option class
                value="option1"
        >
          Test 1
        </option>
        <option class
                value="option2"
        >
          Test 2
        </option>
      </select>
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _selectIcon_1mv9o_50"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
        </path>
      </svg>
    </div>
    <div id="selectErrorId-:r15:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/Select/Select WithCustomClassNames play-test 1`] = `
<div data-test-block="true">
  <div class="dummyClassname">
    <label id="labelId-:ra:"
           class="_label_348na_5    dummyClassname"
           for="selectId-:r9:"
    >
      Ledetekst
    </label>
    <div class="_selectContainer_1mv9o_1 dummyClassnameFormContainer">
      <select id="selectId-:r9:"
              class="_select_1mv9o_1"
              aria-describedby="selectErrorId-:r8:"
              aria-invalid="true"
              style="color: var(--palette-graphite-50);"
      >
        <option value>
          Velg
        </option>
        <option class
                value="option1"
        >
          Test 1
        </option>
        <option class
                value="option2"
        >
          Test 2
        </option>
      </select>
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _selectIcon_1mv9o_50"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
        </path>
      </svg>
    </div>
    <div id="selectErrorId-:r8:"
         aria-live="assertive"
         aria-atomic="true"
    >
      <div class="_errorMessage_1c261_13 dummyClassname">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_small_6zbcy_5 _errorMessageIcon_1c261_24"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M13 14h-2v-4h2v4Zm0 4h-2v-2h2v2ZM1 21h22L12 2 1 21Z">
          </path>
        </svg>
        <p class="_errorMessageText_1c261_29">
          Ledetekst er obligatorisk
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tester/Select/Select WithDefaultValue play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r13:"
           class="_label_348na_5"
           for="selectId-:r12:"
    >
      Ledetekst
    </label>
    <div class="_selectContainer_1mv9o_1 ">
      <select id="selectId-:r12:"
              class="_select_1mv9o_1"
      >
        <option value>
          Velg
        </option>
        <option class
                value="option1"
        >
          Test 1
        </option>
        <option class
                value="option2"
                selected
        >
          Test 2
        </option>
      </select>
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _selectIcon_1mv9o_50"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
        </path>
      </svg>
    </div>
    <div id="selectErrorId-:r11:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/Select/Select WithDescription play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r1s:"
           class="_label_348na_5"
           for="selectId-:r1r:"
    >
      Ledetekst
    </label>
    <div class="_description_10ldw_17">
      En liten beskrivelse tekst
    </div>
    <div class="_selectContainer_1mv9o_1 ">
      <select id="selectId-:r1r:"
              class="_select_1mv9o_1"
              style="color: var(--palette-graphite-50);"
      >
        <option value>
          Velg
        </option>
        <option class
                value="option1"
        >
          Test 1
        </option>
        <option class
                value="option2"
        >
          Test 2
        </option>
      </select>
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _selectIcon_1mv9o_50"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
        </path>
      </svg>
    </div>
    <div id="selectErrorId-:r1q:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/Select/Select WithDisabled play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:rr:"
           class="_label_348na_5"
           for="selectId-:rq:"
    >
      Ledetekst
    </label>
    <div class="_selectContainer_1mv9o_1 ">
      <select id="selectId-:rq:"
              class="_select_1mv9o_1"
              disabled
      >
        <option value>
          Velg
        </option>
        <option class
                value="option1"
        >
          Test 1
        </option>
        <option class
                value="option2"
        >
          Test 2
        </option>
      </select>
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _selectIcon_1mv9o_50"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
        </path>
      </svg>
    </div>
    <div id="selectErrorId-:rp:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/Select/Select WithErrorMessage play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r1n:"
           class="_label_348na_5"
           for="selectId-:r1m:"
    >
      Ledetekst
    </label>
    <div class="_selectContainer_1mv9o_1 ">
      <select id="selectId-:r1m:"
              class="_select_1mv9o_1"
              aria-describedby="selectErrorId-:r1l:"
              aria-invalid="true"
              style="color: var(--palette-graphite-50);"
      >
        <option value>
          Velg
        </option>
        <option class
                value="option1"
        >
          Test 1
        </option>
        <option class
                value="option2"
        >
          Test 2
        </option>
      </select>
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _selectIcon_1mv9o_50"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
        </path>
      </svg>
    </div>
    <div id="selectErrorId-:r1l:"
         aria-live="assertive"
         aria-atomic="true"
    >
      <div class="_errorMessage_1c261_13 ">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_small_6zbcy_5 _errorMessageIcon_1c261_24"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M13 14h-2v-4h2v4Zm0 4h-2v-2h2v2ZM1 21h22L12 2 1 21Z">
          </path>
        </svg>
        <p class="_errorMessageText_1c261_29">
          Ledetekst er obligatorisk
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tester/Select/Select WithEventHandlers play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r2a:"
           class="_label_348na_5"
           for="selectId-:r29:"
    >
      Select har blitt blurret
    </label>
    <div class="_selectContainer_1mv9o_1 ">
      <select id="selectId-:r29:"
              class="_select_1mv9o_1"
              style
      >
        <option value>
          Velg
        </option>
        <option class
                value="option1"
        >
          Test 1
        </option>
        <option class
                value="option2"
        >
          Test 2
        </option>
      </select>
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _selectIcon_1mv9o_50"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
        </path>
      </svg>
    </div>
    <div id="selectErrorId-:r28:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/Select/Select WithHelpText play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r24:"
           class="_label_348na_5"
           for="selectId-:r23:"
    >
      Ledetekst
    </label>
    <button class="_button_g87u5_1 _button_extraSmall_g87u5_29 _button_outlined_g87u5_91 _helpButton_10ldw_27"
            type="button"
            aria-describedby="labelId-:r24:"
            aria-expanded="true"
    >
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:r25:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:r25:">
          Hjelp
        </title>
        <path d="M10 19h3v3h-3v-3Zm2-17c5.35.22 7.68 5.62 4.5 9.67-.83 1-2.17 1.66-2.83 2.5C13 15 13 16 13 17h-3c0-1.67 0-3.08.67-4.08.66-1 2-1.59 2.83-2.25C15.92 8.43 15.32 5.26 12 5a3 3 0 0 0-3 3H6a6 6 0 0 1 6-6Z">
        </path>
      </svg>
    </button>
    <div class="_helpBox_10ldw_31">
      <span class="_helpBoxText_10ldw_44">
        Hjelpetekst
      </span>
      <button class="_button_g87u5_1 _button_small_g87u5_37  _helpBoxCloseButton_10ldw_51"
              type="button"
      >
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r27:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r27:">
            Lukk
          </title>
          <path d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41Z">
          </path>
        </svg>
      </button>
    </div>
    <div class="_selectContainer_1mv9o_1 ">
      <select id="selectId-:r23:"
              class="_select_1mv9o_1"
              style="color: var(--palette-graphite-50);"
      >
        <option value>
          Velg
        </option>
        <option class
                value="option1"
        >
          Test 1
        </option>
        <option class
                value="option2"
        >
          Test 2
        </option>
      </select>
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _selectIcon_1mv9o_50"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
        </path>
      </svg>
    </div>
    <div id="selectErrorId-:r22:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/Select/Select WithHelpToggleEvent smoke-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r2e:"
           class="_label_348na_5"
           for="selectId-:r2d:"
    >
      Ledetekst
    </label>
    <button class="_button_g87u5_1 _button_extraSmall_g87u5_29 _button_outlined_g87u5_91 _helpButton_10ldw_27"
            type="button"
            aria-describedby="labelId-:r2e:"
            aria-expanded="false"
    >
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:r2f:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:r2f:">
          Hjelp
        </title>
        <path d="M10 19h3v3h-3v-3Zm2-17c5.35.22 7.68 5.62 4.5 9.67-.83 1-2.17 1.66-2.83 2.5C13 15 13 16 13 17h-3c0-1.67 0-3.08.67-4.08.66-1 2-1.59 2.83-2.25C15.92 8.43 15.32 5.26 12 5a3 3 0 0 0-3 3H6a6 6 0 0 1 6-6Z">
        </path>
      </svg>
    </button>
    <div class="_selectContainer_1mv9o_1 ">
      <select id="selectId-:r2d:"
              class="_select_1mv9o_1"
              style="color: var(--palette-graphite-50);"
      >
        <option value>
          Velg
        </option>
        <option class
                value="option1"
        >
          Test 1
        </option>
        <option class
                value="option2"
        >
          Test 2
        </option>
      </select>
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _selectIcon_1mv9o_50"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
        </path>
      </svg>
    </div>
    <div id="selectErrorId-:r2c:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/Select/Select WithHideLabel play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r20:"
           class="_label_348na_5  _srOnly_348na_18"
           for="selectId-:r1v:"
    >
      Ledetekst
    </label>
    <div class="_selectContainer_1mv9o_1 ">
      <select id="selectId-:r1v:"
              class="_select_1mv9o_1"
              style="color: var(--palette-graphite-50);"
      >
        <option value>
          Velg
        </option>
        <option class
                value="option1"
        >
          Test 1
        </option>
        <option class
                value="option2"
        >
          Test 2
        </option>
      </select>
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _selectIcon_1mv9o_50"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
        </path>
      </svg>
    </div>
    <div id="selectErrorId-:r1u:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/Select/Select WithHidePlaceholder play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r1b:"
           class="_label_348na_5"
           for="selectId-:r1a:"
    >
      Ledetekst
    </label>
    <div class="_selectContainer_1mv9o_1 ">
      <select id="selectId-:r1a:"
              class="_select_1mv9o_1"
      >
        <option class
                value="option1"
        >
          Test 1
        </option>
        <option class
                value="option2"
        >
          Test 2
        </option>
      </select>
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _selectIcon_1mv9o_50"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
        </path>
      </svg>
    </div>
    <div id="selectErrorId-:r19:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/Select/Select WithRef play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r2:"
           class="_label_348na_5"
           for="selectId-:r1:"
    >
      Ledetekst
    </label>
    <div class="_selectContainer_1mv9o_1 ">
      <select id="selectId-:r1:"
              class="_select_1mv9o_1"
              name="dummyNameForwardedFromRef"
              style="color: var(--palette-graphite-50);"
      >
        <option value>
          Velg
        </option>
        <option class
                value="option1"
        >
          Test 1
        </option>
        <option class
                value="option2"
        >
          Test 2
        </option>
      </select>
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _selectIcon_1mv9o_50"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
        </path>
      </svg>
    </div>
    <div id="selectErrorId-:r0:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/Select/Select WithRequired play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r1f:"
           class="_label_348na_5"
           for="selectId-:r1e:"
    >
      Ledetekst
    </label>
    <div class="_selectContainer_1mv9o_1 ">
      <select id="selectId-:r1e:"
              class="_select_1mv9o_1"
              required
              style="color: var(--palette-graphite-50);"
      >
        <option value>
          Velg
        </option>
        <option class
                value="option1"
        >
          Test 1
        </option>
        <option class
                value="option2"
        >
          Test 2
        </option>
      </select>
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _selectIcon_1mv9o_50"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
        </path>
      </svg>
    </div>
    <div id="selectErrorId-:r1d:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/Select/Select WithRequiredAndMark smoke-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r1j:"
           class="_label_348na_5 _label_required_348na_12"
           for="selectId-:r1i:"
    >
      Ledetekst
    </label>
    <div class="_selectContainer_1mv9o_1 ">
      <select id="selectId-:r1i:"
              class="_select_1mv9o_1"
              required
              style="color: var(--palette-graphite-50);"
      >
        <option value>
          Velg
        </option>
        <option class
                value="option1"
        >
          Test 1
        </option>
        <option class
                value="option2"
        >
          Test 2
        </option>
      </select>
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _selectIcon_1mv9o_50"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
        </path>
      </svg>
    </div>
    <div id="selectErrorId-:r1h:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/Select/Select WithValue play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:rv:"
           class="_label_348na_5"
           for="selectId-:ru:"
    >
      Ledetekst
    </label>
    <div class="_selectContainer_1mv9o_1 ">
      <select id="selectId-:ru:"
              class="_select_1mv9o_1"
      >
        <option value>
          Velg
        </option>
        <option class
                value="option1"
        >
          Test 1
        </option>
        <option class
                value="option2"
        >
          Test 2
        </option>
      </select>
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _selectIcon_1mv9o_50"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
        </path>
      </svg>
    </div>
    <div id="selectErrorId-:rt:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/Select/Select WithVariantLarge smoke-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:rj:"
           class="_label_348na_5"
           for="selectId-:ri:"
    >
      Ledetekst
    </label>
    <div class="_selectContainer_1mv9o_1 ">
      <select id="selectId-:ri:"
              class="_select_1mv9o_1 _select_large_1mv9o_24"
              style="color: var(--palette-graphite-50);"
      >
        <option value>
          Velg
        </option>
        <option class
                value="option1"
        >
          Test 1
        </option>
        <option class
                value="option2"
        >
          Test 2
        </option>
      </select>
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _selectIcon_1mv9o_50 _selectIcon_large_1mv9o_58"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
        </path>
      </svg>
    </div>
    <div id="selectErrorId-:rh:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/Select/Select WithVariantLargeAndLongText smoke-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:rn:"
           class="_label_348na_5"
           for="selectId-:rm:"
    >
      Ledetekst
    </label>
    <div class="_selectContainer_1mv9o_1 ">
      <select id="selectId-:rm:"
              class="_select_1mv9o_1 _select_large_1mv9o_24"
      >
        <option class
                value="option1"
        >
          En lang tekst som ikke skal synes bak åpne ikonet
        </option>
      </select>
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _selectIcon_1mv9o_50 _selectIcon_large_1mv9o_58"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
        </path>
      </svg>
    </div>
    <div id="selectErrorId-:rl:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;
